feat: CRUD for Case